ui, compile code first, then run code if compilable